--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Gid Layout</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
+    <div class="pantalla">
+        <div class="caja">Uno</div>
+        <div class="caja">Dos</div>
+        <div class="caja">Tres</div>
+        <div class="caja">Cuatro</div>
+        <div class="caja">Cinco</div>
+        <div class="caja">Seis</div>
+        <div class="caja">Siete</div>
+        <div class="caja">Ocho</div>
+        <div class="caja">Nueve</div>
+    </div>
 </body>
 </html>
