feat: :lipstick: Cambios en el css
Se generaron los arreglos del css en cuanto al responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="storage/img/img3.png" alt="img3">
         </div>
         <div class="item4">
-            <img src="storage/img/img4.jpeg" alt="img4">
+            <img class="imagen4" src="storage/img/img4.jpeg" alt="img4">
         </div>
         <div class="item5">
             <img src="storage/img/img5.png" alt="img5">
