--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body> 
     <article class="container"> 
         <div class="item1">
-            <img src="storage/img/img1.png" alt="img1">
+            <img class="imagen1" src="storage/img/img1.png" alt="img1">
         </div>
         <div class="item2">
             <img src="storage/img/img2.png" alt="img2">
         </div>
         <div class="item3">
-            <img src="storage/img/img3.png" alt="img3">
+            <img class="imagen3" src="storage/img/img3.png" alt="img3">
         </div>
         <div class="item4">
             <img class="imagen4" src="storage/img/img4.jpeg" alt="img4">
         </div>
         <div class="item5">
-            <img src="storage/img/img5.png" alt="img5">
+            <img class="imagen5" src="storage/img/img5.png" alt="img5">
         </div>
         <div class="item6">
-            <img src="storage/img/img6.png" alt="img6">
+            <img class="imagen6" src="storage/img/img6.png" alt="img6">
         </div>
         <div class="item7">
             <img src="storage/img/img7.png" alt="img7">
