feat: :construction: Primeros avances de la implementacion del contenido
Se generaron los cambios pertinentes para la creación de contenido

--- a/index.html
+++ b/index.html
@@ -4,14 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
+    <title>Apple</title>
 </head>
 <body>
     <article class="container">
-        <div class="item1">Hijo 1</div>
-        <div class="item2">Hijo 2</div>
-        <div class="item3">Hijo 3</div>
-        <div class="item4">Hijo 4</div>
+        <div class="item1">
+            <img src="storage/img/img1.jpeg" alt="">
+            <p class="card">Get a $150 gift card</p>
+            <b class="air">MackBook Air</b>
+            <p class="mo">From $899 or $74.91/mo<br>
+                for 12 mo. <sup>3</sup>
+            </p>
+            <p class="edu">Includes education discount</p>
+            <img src="storage/img/col1.png" alt="">
+        </div>
+
+        <div class="item2">
+            <b class="pro"><small>MackBook Pro</small></b>
+            <b class="major"><strong>Runs all your <br> 
+                major apps.</strong>
+            </b>
+            <img src="storage/img/img2.png" alt="">
+        </div>
+
+        <div class="item3">
+            <b class="macbook"><small>MackBook Air</small></b>
+            <b class="big"><strong>Big screen on campus</strong></b>
+            <img src="storage/img/img3.png" alt="" >
+        </div>
+
+        <div class="item4">
+            <img src="storage/img/img4.png" class="pequena" alt="">
+            <p class="gift">Get a $150 gift card</p>
+            <b class="macbookPro">MackBook Pro</b>
+            <p class="price">From $1199 or $99.91/mo<br>
+            for 12 mo. <sup>3</sup>
+            </p>
+            <p class="disc">Includes education discount</p>
+            <img src="storage/img/col2.png" alt="">
+        </div>
     </article>
 </body>
 </html>
